Arreglando los inputsn time para movil

--- a/css/index.css
+++ b/css/index.css
@@ -563,7 +563,12 @@ footer>ul>li{
         padding-bottom: 5px 0;
         
     }
-   
+    .numeros{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     .runner-img>img{
         width: 100%;
     }
