--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body{
     
     background-size: cover;
 
-    height: 100vh;
+    height: 100%;
     
     display: flex;
     flex-direction: column;
