--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ body{
     
     background-size: cover;
 
-    height: 100%;
+    height: 100%    ;
     
     display: flex;
     flex-direction: column;
@@ -435,8 +435,9 @@ footer{
 
     margin-top: auto;
 
-    background-color: var(--xd-bg);
     padding: 20px 10px;
+    background-color: rgba(218, 218, 218, 0.664);
+    backdrop-filter: blur(5px);
 }
 .footer{
     width: 100%;
@@ -485,6 +486,9 @@ footer>ul>li{
 }
 /* Para pantallas mayores a 780px */
 @media (min-width:780px){
+    body{
+        height: 100vh;
+    }
     header{
         background-color: var(--xd-bg);
         display: flex;
