--- a/css/index.css
+++ b/css/index.css
@@ -125,8 +125,10 @@ header{
     width: 100%;
 }
 .menu{
+    z-index: 3;
     position: absolute;
-    width: 80%;
+    height: 100%;
+    width: 100%;
     background-color: rgba(255, 255, 255, 0.5);
 }
 .menu-list{
