--- a/css/index.css
+++ b/css/index.css
@@ -282,12 +282,25 @@ header{
 .alarmform{
     
 }
-.numeros>label{
+.numeros{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.numeros__cont{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.numeros__cont>label{
     font-size: 1.2rem;
     font-weight: 700;
     color: #353232;
 }
-.numeros>input{
+.numeros__cont>input{
     padding: 5px 8px;
     border: none; 
     border-radius: 5px;  
@@ -337,9 +350,9 @@ hr{
     flex-direction: column;
     justify-content: space-around;
     align-items: center; 
-    width: 500px;
-    height: 500px;
-
+    width: 90%;
+    height: 90%;
+    margin: 0 30px;
     backdrop-filter: blur(2px);
 
     background-color: rgba(255, 255, 255, 0.6);
