segundo cambio input

--- a/css/index.css
+++ b/css/index.css
@@ -291,7 +291,7 @@ header{
 .numeros__cont{
     width: 80%;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: space-between;
 }
