--- a/css/index.css
+++ b/css/index.css
@@ -286,12 +286,11 @@ header{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 .numeros__cont{
-    width: 80%;
+    width: 100%;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
