add gap to inputs time

--- a/css/index.css
+++ b/css/index.css
@@ -493,6 +493,7 @@ footer>ul>li{
     .numeros{
         width: 100%;
         display: flex;
+        gap: 10px;
     }
     .numeros__cont{
         width: 100%;
