resizing main-container

--- a/css/index.css
+++ b/css/index.css
@@ -337,9 +337,7 @@ hr{
     font-size: 1.5rem;
     color: #353232;
 }
-.musica{
-    
-}
+
 /* modal css start */
 
 .modal{
@@ -498,6 +496,9 @@ footer>ul>li{
         position: fixed;
         top: 0;
     }
+    .main{
+        height: 100vh;
+    }
     .numeros{
         width: 100%;
         display: flex;
@@ -513,6 +514,7 @@ footer>ul>li{
     .btn-start{
         padding-top: 20px;
     }
+    
 }
 /* Para pantallas mayores a 780px */
 @media (min-width:780px){
