--- a/css/index.css
+++ b/css/index.css
@@ -444,8 +444,8 @@ footer{
     align-items: center;
     justify-content: center;
 
-    margin-top: auto;
-
+    margin-top: 100vh;
+    bottom: 0;
     padding: 20px 10px;
     background-color: rgba(218, 218, 218, 0.664);
     backdrop-filter: blur(5px);
