--- a/css/index.css
+++ b/css/index.css
@@ -444,7 +444,7 @@ footer{
     align-items: center;
     justify-content: center;
 
-    margin-top: 100vh;
+    /* margin-top: 100%; */
     bottom: 0;
     padding: 20px 10px;
     background-color: rgba(218, 218, 218, 0.664);
