--- a/css/index.css
+++ b/css/index.css
@@ -451,6 +451,7 @@ footer{
     backdrop-filter: blur(5px);
 }
 .footer{
+    position: fixed;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
